# shbin

./: .gitignore  pyproject.toml  setup.py
shbin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
