[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shbin"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Communications :: File Sharing",
]
authors = [
    {name = "Alvar Maciel", email = "alvar.maciel@shiphero.com"}, 
    {name = "Martín Gaitán", email = "marting@shiphero.com"}
]
dependencies = [
    "pygithub >= 1.55",
    "pyclip >= 0.7.0",
    "python-magic >= 0.4.27",
    "docopt-ng >= 0.8.1",
    "rich >= 12.5",
]
version = "0.3.1"
description = "It's a tiny command-line tool we've built at Shiphero that lets you easily upload code snippets, notebooks, images, or any other file to a Github repository that acts as your internal pastebin, and returns the URL to share it with your team. If possible, this URL is automatically copied to the clipboard."


[project.urls]
Home = "https://github.com/Shiphero/shbin"
Changelog = "https://github.com/Shiphero/shbin/blob/main/CHANGELOG.md"

[project.scripts]
shbin = "shbin:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pytest-cov",
    "flake8",
]

[tool.black]
target-version = ["py38"]
line-length = 120
color = true

[tool.ruff]
target-version = "py38"
line-length = 120

